<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        style="@style/TextStyle.Headline3"
        android:id="@+id/text_title_app_name"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/text_round_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/text_round_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_app_name" />

    <EditText
        android:id="@+id/round_edittext"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:padding="5dp"
        android:background="@drawable/background_rounds"
        app:layout_constraintEnd_toEndOf="@+id/text_round_textview"
        app:layout_constraintStart_toStartOf="@+id/text_round_textview"
        app:layout_constraintTop_toBottomOf="@+id/text_round_textview"
        android:autofillHints="round" />

    <Button
        style="@style/TextStyle.Button"
        android:id="@+id/start_game_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_start_game"
        android:text="@string/text_start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>