<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/score_player"
        style="@style/TextStyle.Bold.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_score"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:text="@string/text_score_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_computer"
        style="@style/TextStyle.Bold.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_score"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:text="@string/text_score_textview"
        app:layout_constraintBaseline_toBaselineOf="@+id/score_player"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/round_of_textview"
        style="@style/TextStyle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/text_roundof_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_game_match"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_of_textview">

        <TextView
            android:id="@+id/text_player_textview"
            style="@style/TextStyle.Bold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_player_textview"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_computer_textview"
            style="@style/TextStyle.Bold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_computer_textview"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_choice_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:src="@drawable/placeholder_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_player_textview" />

        <TextView
            android:id="@+id/text_vs_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/text_vs"
            android:textColor="@android:color/holo_red_light"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/computer_choice_imageview"
            app:layout_constraintStart_toEndOf="@+id/player_choice_imageview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/computer_choice_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:src="@drawable/placeholder_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_computer_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/scissors_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="@+id/rock_imageview"
        app:layout_constraintEnd_toStartOf="@+id/rock_imageview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rock_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="@+id/paper_imageview"
        app:layout_constraintEnd_toStartOf="@+id/paper_imageview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scissors_imageview" />

    <ImageView
        android:id="@+id/paper_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rock_imageview"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>